// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DrillListPage /> renders correctly when connected 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "height": "100%",
      "paddingLeft": 20,
      "paddingTop": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#A6A6A6",
        "marginBottom": 20,
      }
    }
  >
    7
     drills available
  </Text>
  <RCTScrollView
    data={
      Array [
        Object {
          "animation": Object {
            "ids": Array [
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "offense",
              "offense",
              "offense",
              "offense",
              "offense",
              "disc",
            ],
            "positions": Array [
              Array [
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.2,
                    0.45,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.45,
                    0.7,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.7,
                    0.45,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    0.16,
                    0.3,
                  ],
                ],
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                Array [
                  Array [
                    0.7,
                    0.45,
                  ],
                ],
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                Array [
                  Array [
                    0.45,
                    0.7,
                  ],
                ],
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                Array [
                  Array [
                    0.2,
                    0.45,
                  ],
                ],
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    0.36,
                    0.36,
                  ],
                ],
                undefined,
                Array [
                  Array [
                    0.58,
                    0.36,
                  ],
                ],
                Array [
                  Array [
                    0.58,
                    0.58,
                  ],
                ],
                Array [
                  Array [
                    0.36,
                    0.58,
                  ],
                ],
                Array [
                  Array [
                    0.36,
                    0.36,
                  ],
                ],
              ],
            ],
            "texts": Array [
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "1",
              "2",
              "3",
              "4",
              "5",
              "",
            ],
          },
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 10,
          "equipment": "One disc, 2 cones, 3 players",
          "goals": Array [
            "Defense",
            "Handling",
          ],
          "id": 2,
          "image": "https://www.plu.edu/recreations/wp-content/uploads/sites/197/2019/04/ultimate-frisbee-3-2-19-1122-scaled-1536x1163.jpg",
          "level": "beginner",
          "nbPlayers": 2,
          "source": "Flikulti",
          "steps": Array [],
          "title": "Defense Positioning",
          "type": "technical",
        },
        Object {
          "animation": Object {
            "ids": Array [
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "offense",
              "offense",
              "offense",
              "offense",
              "offense",
              "disc",
            ],
            "positions": Array [
              Array [
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.2,
                    0.45,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.45,
                    0.7,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.7,
                    0.45,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    0.16,
                    0.3,
                  ],
                ],
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                Array [
                  Array [
                    0.7,
                    0.45,
                  ],
                ],
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                Array [
                  Array [
                    0.45,
                    0.7,
                  ],
                ],
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                Array [
                  Array [
                    0.2,
                    0.45,
                  ],
                ],
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    0.36,
                    0.36,
                  ],
                ],
                undefined,
                Array [
                  Array [
                    0.58,
                    0.36,
                  ],
                ],
                Array [
                  Array [
                    0.58,
                    0.58,
                  ],
                ],
                Array [
                  Array [
                    0.36,
                    0.58,
                  ],
                ],
                Array [
                  Array [
                    0.36,
                    0.36,
                  ],
                ],
              ],
            ],
            "texts": Array [
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "1",
              "2",
              "3",
              "4",
              "5",
              "",
            ],
          },
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 15,
          "equipment": "One disc, 2 cones, 3 players",
          "goals": Array [
            "Technical",
          ],
          "id": 4,
          "image": "https://conseils.casalsport.com/wp-content/uploads/2019/05/ultimate-frisbee-sport.jpg",
          "level": "beginner",
          "nbPlayers": 2,
          "source": "Rise up",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Only the animation",
            },
          ],
          "title": "Backhand",
          "type": "technical",
        },
        Object {
          "animation": Object {
            "ids": Array [
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "offense",
              "offense",
              "offense",
              "offense",
              "offense",
              "disc",
            ],
            "positions": Array [
              Array [
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.2,
                    0.45,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.45,
                    0.7,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.7,
                    0.45,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    0.16,
                    0.3,
                  ],
                ],
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                Array [
                  Array [
                    0.7,
                    0.45,
                  ],
                ],
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                Array [
                  Array [
                    0.45,
                    0.7,
                  ],
                ],
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                Array [
                  Array [
                    0.2,
                    0.45,
                  ],
                ],
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    0.36,
                    0.36,
                  ],
                ],
                undefined,
                Array [
                  Array [
                    0.58,
                    0.36,
                  ],
                ],
                Array [
                  Array [
                    0.58,
                    0.58,
                  ],
                ],
                Array [
                  Array [
                    0.36,
                    0.58,
                  ],
                ],
                Array [
                  Array [
                    0.36,
                    0.36,
                  ],
                ],
              ],
            ],
            "texts": Array [
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "1",
              "2",
              "3",
              "4",
              "5",
              "",
            ],
          },
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 20,
          "equipment": "One disc, 2 cones, 3 players",
          "goals": Array [
            "Defense",
            "Fast break",
          ],
          "id": 5,
          "image": "https://i1.wp.com/www.newdelhitimes.com/wp-content/uploads/2019/07/AP19204604544330.jpg?w=1024&ssl=1",
          "level": "intermediate",
          "nbPlayers": 5,
          "source": "Moby book",
          "steps": Array [],
          "title": "3 vs 2",
          "type": "technical",
        },
        Object {
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 18,
          "equipment": "One disc, 2 cones, 3 players",
          "goals": Array [
            "Offense",
            "Handling",
          ],
          "id": 6,
          "image": "https://siena.rosselcdn.net/sites/default/files/dpistyles_v2/ena_16_9_extra_big/2020/03/05/node_528988/1877948/public/2020/03/05/B9722816509Z.1_20200305151253_000%2BG2AFL39TF.1-0.jpg?itok=jAQBQG6y1583417579",
          "level": "beginner",
          "nbPlayers": 10,
          "source": "Haude et Djé",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Only the animation",
            },
          ],
          "title": "Treasure hunt",
          "type": "technical",
        },
        Object {
          "animation": Object {
            "ids": Array [
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "triangle",
              "offense",
              "offense",
              "offense",
              "offense",
              "offense",
              "disc",
            ],
            "positions": Array [
              Array [
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.2,
                    0.45,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.45,
                    0.7,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.7,
                    0.45,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                undefined,
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    0.16,
                    0.3,
                  ],
                ],
                Array [
                  Array [
                    0.45,
                    0.2,
                  ],
                ],
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.3,
                  ],
                ],
                undefined,
                Array [
                  Array [
                    0.7,
                    0.45,
                  ],
                ],
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.6,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                Array [
                  Array [
                    0.45,
                    0.7,
                  ],
                ],
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
              ],
              Array [
                Array [
                  Array [
                    0.3,
                    0.6,
                  ],
                ],
                undefined,
                undefined,
                undefined,
                Array [
                  Array [
                    0.2,
                    0.45,
                  ],
                ],
                Array [
                  Array [
                    0.3,
                    0.3,
                  ],
                ],
              ],
              Array [
                Array [
                  Array [
                    0.36,
                    0.36,
                  ],
                ],
                undefined,
                Array [
                  Array [
                    0.58,
                    0.36,
                  ],
                ],
                Array [
                  Array [
                    0.58,
                    0.58,
                  ],
                ],
                Array [
                  Array [
                    0.36,
                    0.58,
                  ],
                ],
                Array [
                  Array [
                    0.36,
                    0.36,
                  ],
                ],
              ],
            ],
            "texts": Array [
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "",
              "1",
              "2",
              "3",
              "4",
              "5",
              "",
            ],
          },
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 12,
          "equipment": "One disc, 2 cones, 3 players",
          "goals": Array [
            "Throwing",
            "Offense",
          ],
          "id": 7,
          "image": "https://d3j2bju5c7tc02.cloudfront.net/2016_44/backhand.jpg",
          "level": "intermediate",
          "nbPlayers": 2,
          "source": "Moby book",
          "steps": Array [],
          "title": "The big 8",
          "type": "technical",
        },
        Object {
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 20,
          "equipment": "One disc, 2 cones, 3 players",
          "goals": Array [
            "Defense",
            "Positionning",
          ],
          "id": 8,
          "image": "https://cms.qz.com/wp-content/uploads/2015/08/h_00486649-e1438606606764.jpg?quality=75&strip=all&w=1600&h=900",
          "level": "intermediate",
          "nbPlayers": 2,
          "source": "Kie",
          "steps": Array [
            Object {
              "subtitle": "This is a subtitle",
              "title": "Only the animation",
            },
          ],
          "title": "Force middle",
          "type": "technical",
        },
        Object {
          "description": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec scelerisque dignissim felis, at tristique mi efficitur a. Nulla pellentesque odio nunc, ut sodales ex pulvinar at. In hac habitasse platea dictumst. Pellentesque sodales nisl lorem, ac lacinia nisl lacinia eu. Proin lacinia viverra mauris, et pharetra ipsum tempus eget. Ut maximus sapien in hendrerit ultricies. Maecenas vel diam tincidunt, consequat nunc a, mattis eros. Curabitur a eros a nulla malesuada gravida. Donec massa quam, suscipit eget efficitur et, euismod sed nulla. Morbi mattis et magna a aliquam. Fusce pellentesque vel erat eget",
          "durationInMinutes": 14,
          "equipment": "One disc, 2 cones, 3 players",
          "goals": Array [
            "Catch",
            "Throwing",
          ],
          "id": 9,
          "image": "https://www.plu.edu/recreations/wp-content/uploads/sites/197/2019/04/ultimate-frisbee-3-2-19-1122-scaled-1536x1163.jpg",
          "level": "intermediate",
          "nbPlayers": 6,
          "source": "Mooncatchers",
          "steps": Array [],
          "title": "Long & dishies",
          "type": "technical",
        },
      ]
    }
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://www.plu.edu/recreations/wp-content/uploads/sites/197/2019/04/ultimate-frisbee-3-2-19-1122-scaled-1536x1163.jpg",
              }
            }
            style={
              Object {
                "borderRadius": 5,
                "height": 80,
                "marginRight": 10,
                "width": 80,
              }
            }
          />
          <View
            style={
              Object {
                "padding": 5,
                "paddingBottom": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Flikulti
            </Text>
            <Text
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Defense Positioning
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Duration: 
              10
               min - players: 
              2
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://conseils.casalsport.com/wp-content/uploads/2019/05/ultimate-frisbee-sport.jpg",
              }
            }
            style={
              Object {
                "borderRadius": 5,
                "height": 80,
                "marginRight": 10,
                "width": 80,
              }
            }
          />
          <View
            style={
              Object {
                "padding": 5,
                "paddingBottom": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Rise up
            </Text>
            <Text
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Backhand
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Duration: 
              15
               min - players: 
              2
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://i1.wp.com/www.newdelhitimes.com/wp-content/uploads/2019/07/AP19204604544330.jpg?w=1024&ssl=1",
              }
            }
            style={
              Object {
                "borderRadius": 5,
                "height": 80,
                "marginRight": 10,
                "width": 80,
              }
            }
          />
          <View
            style={
              Object {
                "padding": 5,
                "paddingBottom": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Moby book
            </Text>
            <Text
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              3 vs 2
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Duration: 
              20
               min - players: 
              5
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://siena.rosselcdn.net/sites/default/files/dpistyles_v2/ena_16_9_extra_big/2020/03/05/node_528988/1877948/public/2020/03/05/B9722816509Z.1_20200305151253_000%2BG2AFL39TF.1-0.jpg?itok=jAQBQG6y1583417579",
              }
            }
            style={
              Object {
                "borderRadius": 5,
                "height": 80,
                "marginRight": 10,
                "width": 80,
              }
            }
          />
          <View
            style={
              Object {
                "padding": 5,
                "paddingBottom": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Haude et Djé
            </Text>
            <Text
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Treasure hunt
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Duration: 
              18
               min - players: 
              10
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://d3j2bju5c7tc02.cloudfront.net/2016_44/backhand.jpg",
              }
            }
            style={
              Object {
                "borderRadius": 5,
                "height": 80,
                "marginRight": 10,
                "width": 80,
              }
            }
          />
          <View
            style={
              Object {
                "padding": 5,
                "paddingBottom": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Moby book
            </Text>
            <Text
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              The big 8
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Duration: 
              12
               min - players: 
              2
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://cms.qz.com/wp-content/uploads/2015/08/h_00486649-e1438606606764.jpg?quality=75&strip=all&w=1600&h=900",
              }
            }
            style={
              Object {
                "borderRadius": 5,
                "height": 80,
                "marginRight": 10,
                "width": 80,
              }
            }
          />
          <View
            style={
              Object {
                "padding": 5,
                "paddingBottom": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Kie
            </Text>
            <Text
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Force middle
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Duration: 
              20
               min - players: 
              2
            </Text>
          </View>
        </View>
      </View>
      <View
        onLayout={[Function]}
        style={null}
      >
        <View
          accessible={true}
          focusable={true}
          isTVSelectable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flexDirection": "row",
              "height": 80,
              "marginBottom": 20,
              "opacity": 1,
            }
          }
        >
          <Image
            source={
              Object {
                "uri": "https://www.plu.edu/recreations/wp-content/uploads/sites/197/2019/04/ultimate-frisbee-3-2-19-1122-scaled-1536x1163.jpg",
              }
            }
            style={
              Object {
                "borderRadius": 5,
                "height": 80,
                "marginRight": 10,
                "width": 80,
              }
            }
          />
          <View
            style={
              Object {
                "padding": 5,
                "paddingBottom": 10,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Mooncatchers
            </Text>
            <Text
              style={
                Object {
                  "flex": 3,
                  "flexWrap": "wrap",
                  "fontSize": 20,
                  "fontWeight": "bold",
                }
              }
            >
              Long & dishies
            </Text>
            <Text
              style={
                Object {
                  "color": "#A6A6A6",
                  "flex": 2,
                  "fontSize": 14,
                }
              }
            >
              Duration: 
              14
               min - players: 
              6
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 50,
        "bottom": "5%",
        "elevation": 10,
        "height": 100,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": "5%",
        "shadowOffset": Object {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
        "width": 100,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "bold",
          "textTransform": "uppercase",
        }
      }
    >
      Filter
    </Text>
  </View>
</View>
`;

exports[`<DrillListPage /> renders correctly with a drill 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "height": "100%",
      "paddingLeft": 20,
      "paddingTop": 10,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#A6A6A6",
        "marginBottom": 20,
      }
    }
  >
    0
     drills available
  </Text>
  <RCTScrollView
    data={Array []}
    disableVirtualization={false}
    getItem={[Function]}
    getItemCount={[Function]}
    horizontal={false}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onContentSizeChange={[Function]}
    onEndReachedThreshold={2}
    onLayout={[Function]}
    onMomentumScrollEnd={[Function]}
    onScroll={[Function]}
    onScrollBeginDrag={[Function]}
    onScrollEndDrag={[Function]}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    stickyHeaderIndices={Array []}
    updateCellsBatchingPeriod={50}
    viewabilityConfigCallbackPairs={Array []}
    windowSize={21}
  >
    <View />
  </RCTScrollView>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderRadius": 50,
        "bottom": "5%",
        "elevation": 10,
        "height": 100,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": "5%",
        "shadowOffset": Object {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 10,
        "width": 100,
      }
    }
  >
    <Text
      style={
        Object {
          "fontSize": 24,
          "fontWeight": "bold",
          "textTransform": "uppercase",
        }
      }
    >
      Filter
    </Text>
  </View>
</View>
`;
